--- a/sass/Mainpages.scss
+++ b/sass/Mainpages.scss
@@ -1,6 +1,5 @@
 .pane{
-    position: relative;
     float:left;
-    overflow: hidden;
+    overflow: hidden;    
     width:100%;
 }
